RESOLVED FIXED271613
[Skia] Fix support for custom cursors with GTK
https://bugs.webkit.org/show_bug.cgi?id=271613
Summary [Skia] Fix support for custom cursors with GTK
Patrick Griffis
Reported 2024-03-24 13:19:53 PDT
""
Attachments
Patrick Griffis
Comment 1 2024-03-24 13:49:48 PDT
EWS
Comment 2 2024-03-27 08:18:29 PDT
Committed 276737@main (ee489d263ec6): <https://commits.webkit.org/276737@main> Reviewed commits have been landed. Closing PR #26388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.