[Skia] Fix support for custom cursors with GTK https://bugs.webkit.org/show_bug.cgi?id=271613

Reviewed by Adrian Perez de Castro.

* Source/WebCore/platform/graphics/gtk/GdkSkiaUtilities.cpp:
(WebCore::skiaImageToGdkPixbuf):
* Source/WebCore/platform/graphics/gtk/GdkSkiaUtilities.h:
* Source/WebCore/platform/graphics/gtk/ImageAdapterGtk.cpp:
(WebCore::ImageAdapter::gdkPixbuf):
(WebCore::ImageAdapter::gdkTexture):
* Source/WebCore/platform/gtk/CursorGtk.cpp:
(WebCore::createCustomCursor):

destroy notify was not being called.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::~GraphicsContextSkia):

Canonical link: https://commits.webkit.org/276737@main