Source/WebCore/platform/gtk/CursorGtk.cpp
@@ -64,19 +64,12 @@ static GRefPtr<GdkCursor> createCustomCursor(Image* image, const IntPoint& hotSp
     IntPoint effectiveHotSpot = determineHotSpot(image, hotSpot);
     return adoptGRef(gdk_cursor_new_from_texture(texture.get(), effectiveHotSpot.x(), effectiveHotSpot.y(), fallbackCursor().get()));
 #else
-    auto nativeImage = image->nativeImageForCurrentFrame();
-    if (!nativeImage)
+    auto pixbuf = image->adapter().gdkPixbuf();
+    if (!pixbuf)
         return nullptr;
 
-#if USE(CAIRO)
-    auto& surface = nativeImage->platformImage();
     IntPoint effectiveHotSpot = determineHotSpot(image, hotSpot);
-    return adoptGRef(gdk_cursor_new_from_surface(gdk_display_get_default(), surface.get(), effectiveHotSpot.x(), effectiveHotSpot.y()));
-#elif USE(SKIA)
-    UNUSED_PARAM(hotSpot);
-    notImplemented();
-    return nullptr;
-#endif
+    return adoptGRef(gdk_cursor_new_from_pixbuf(gdk_display_get_default(), pixbuf.get(), effectiveHotSpot.x(), effectiveHotSpot.y()));
 #endif // USE(GTK4)
 }
 
